Update and rename ajuba.html to index.html

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <aside class="sidebar">
                <div class="sidebar-title">
                     <figure class="logo">
-                        <a href="ajuba.html"><img src="img/logo.JPG" alt="logo"></a>
+                        <a href="index.html"><img src="img/logo.JPG" alt="logo"></a>
                     </figure>
                </div> 
                <div class="sidebar-links">
